syntax = "proto3";

import "google/protobuf/timestamp.proto";

option java_package = "ru.neoflex.market.warehouse";

package warehouse;

message ProductCreateRequest {
  string displayName = 1;
}

message ProductCreateResponse {
  string productId = 1;
}

message ProductDeleteRequest {
  string productId = 1;
}

message ProductDeleteResponse {
  string productId = 1;
}

message ProductBookRequest {
  string productId = 1;
  string userId = 3;
}

message ProductBookResponse {
  string productId = 1;
}

message ProductUnbookRequest {
  string productId = 1;
  string userId = 3;
}

message ProductUnbookResponse {
  string productId = 1;
}

message Product {
  string displayName = 1;
  string created = 2;
  string updated = 3;
  string status = 4;
}

message Empty {}

service WarehouseService {
  rpc getProducts (Empty) returns (stream Product) {}
  rpc bookProduct (ProductBookRequest) returns (ProductBookResponse) {}
  rpc unbookProduct (ProductUnbookRequest) returns (ProductUnbookResponse) {}
  rpc createProduct (ProductCreateRequest) returns (ProductCreateResponse) {}
  rpc deleteProduct (ProductDeleteRequest) returns (ProductDeleteResponse) {}
}
